--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 
 <body>
 <div class="container">
+
+
+
+
+<nav>
+  <a href="#html">Home</a> |
+  <a href="#css">News</a> |
+  <a href="#js">Services</a> |
+  <a href="#jquery">Contact</a>
+</nav>
+
+
+
+
+
+
+
 <article>
 <h1>Un nouveau départ</h1>
 <p>Je suis en train d'écrire cet article..</p><br><br>
