change title and remove hover

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>title</title>
-  <meta name="description" content="description of the content">
+  <title>🔹🔷 Antoine Weber Website</title>
+  <meta name="description" content="Antoine Weber Website">
   <meta name="author" content="Antoine Weber">
 
   <link rel="stylesheet" href="css/main.css">
