--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Antoine Weber">
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
