add mobile adaptability

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
   <title>🔹🔷 Antoine Weber Website</title>
   <meta name="description" content="Antoine Weber Website">
@@ -51,7 +52,7 @@ Antoine #####<br>
 </address>
 <br>
 <a href="google.com">revenir à la page précédente</a>
-</footer>
+</footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </article>
 </div> 
 </body>
