--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@ Antoine #####<br>
 </address>
 <br>
 <a href="google.com">revenir à la page précédente</a>
+
 </footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<h2>Un nouveau départ</h2>
 </article>
 </div> 
+<script src="js/main.js"></script>
 </body>
 </html>
