navbar fixed et centrage vertical

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="fr-FR">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -14,20 +14,22 @@
 </head>
 
 <body>
-<div class="container">
+
 
 
 
 
 <nav>
+<div class="container">
   <a href="#html">Home</a> |
   <a href="#css">News</a> |
   <a href="#js">Services</a> |
   <a href="#jquery">Contact</a>
+  </div>
 </nav>
+<div class="container">
 
-
-
+<br><br><br>
 
 
 
@@ -58,5 +60,6 @@ Antoine #####<br>
 </article>
 </div> 
 <script src="js/main.js"></script>
+<!--<script>alert("it's happening")</script>-->
 </body>
 </html>
