--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
 <nav>
 <div class="container">
-  <a href="#html">Home</a> |
-  <a href="#css">News</a> |
-  <a href="#js">Services</a> |
+	
+	<a href="#html"><img id="logo" src="logo.png"></img></a>
+  <a href="#css">News</a>
+  <a href="#js">About</a>
   <a href="#jquery">Contact</a>
   </div>
 </nav>
@@ -36,8 +37,8 @@
 
 
 <article>
-<h1>Un nouveau départ</h1>
-<p>Je suis en train d'écrire cet article..</p><br><br>
+<h1>Sophie Avocat</h1>
+<p>Veuillez nous indiquer votre question</p><br><br>
 <form action="/action_page.php">
 login___: <input type="email" name="FirstName" autocomplete="on"><br>
 password: <input type="password" name="LastName"><br>
