ajout footer, sur, supprimer body margin

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-
+<header>
 <nav>
 <div class="container">
 	
@@ -28,15 +28,17 @@
   <a href="#jquery">Contact</a>
   </div>
 </nav>
+</header>
 
 
-<div class="container">
-<br><br><br>
+
 
 
 
 
 <article>
+<div class="container">
+<br><br><br>
 <h1>Sophie Avocat</h1>
 <p>Veuillez nous indiquer votre question</p><br><br>
 <form action="/action_page.php">
@@ -48,20 +50,36 @@ checkbox: <input type="checkbox" name="checkbox"><br>
 color: <input type="color" name="color"><br>
 <input type="submit" value="get rekt">
 </form>
-<footer>
-<address>
-Antoine #####<br>
-# Rue ######## #######<br>
-75### Paris<br>
-</address>
-<br>
-<a href="google.com">revenir à la page précédente</a>
 
-</footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br>
+<br><br><br><br><br><br><br>
 <h2>Un nouveau départ</h2>
-</article>
-</div> 
+
+
 <script src="js/main.js"></script>
 <!--<script>alert("it's happening")</script>-->
+</div>  <!-- fin du container div-->
+</article>
+
+
+
+<footer>
+<div class="container">
+<br>
+<address>
+Sophie #####<br>
+# Rue ######## #######<br>
+##### #####<br>
+</address>
+<br>
+<br>
+<br>
+<a href="google.com">revenir à la page précédente</a>
+<br>
+<br>
+</div>
+</footer>
+
+
 </body>
 </html>
