ajout d'un loun lower footer

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ color: <input type="color" name="color"><br>
 
 
 <footer>
+<div id="upperFooter">
 <div class="container">
 <br>
 <address>
@@ -77,7 +78,16 @@ Sophie #####<br>
 <a href="google.com">revenir à la page précédente</a>
 <br>
 <br>
-</div>
+</div>  <!-- fin du container div-->
+</div>  <!-- fin du upperFooter-->
+
+<div id="lowerFooter">
+<div class="container">
+<span id="copyright">Copyright Antoine W. 2018</span>
+</div>  <!-- fin du container div-->
+</div>  <!-- fin du lowerFooter-->
+
+
 </footer>
 
 
