ajout d'une main img

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
 
 
 <article>
+
+<div id="roomForNavBar"></div>
 <div class="container">
-<br><br><br>
+<img id="mainPhoto" src="justice.jpg" height="300px"></img>
+<br>
+
 <h1>Sophie Avocat</h1>
 <p>Veuillez nous indiquer votre question</p><br><br>
 <form action="/action_page.php">
