--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <div id="roomForNavBar"></div>
 <div class="container">
-<img id="mainPhoto" src="justice.jpg" height="300px"></img>
+<img id="mainPhoto" src="justice.jpg" height=300px></img>
 <br>
 
 <h1>Sophie Avocat</h1>
-<p>Veuillez nous indiquer votre question</p><br><br>
+<p>Veuillez nous indiquer votre question</p>
 <form action="/action_page.php">
 login___: <input type="email" name="FirstName" autocomplete="on"><br>
 password: <input type="password" name="LastName"><br>
@@ -55,8 +55,8 @@ color: <input type="color" name="color"><br>
 <input type="submit" value="get rekt">
 </form>
 
-<br><br>
-<br><br><br><br><br><br><br>
+
+
 <h2>Un nouveau départ</h2>
 
 
