utilisation de grid css pour virer à droite les liens de la navbar

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
 <header>
 <nav>
 <div class="container">
+<div id="grid-container">
+<div id="header-left">
+<a href="#html"><img id="logo" src="logo.png"></img></a>
+</div>
+<div id="header-right">
 	
-	<a href="#html"><img id="logo" src="logo.png"></img></a>
-  <a href="#css">News</a>
-  <a href="#js">About</a>
-  <a href="#jquery">Contact</a>
+  <a href="#css">Actualités</a>
+  <a href="#js">À Propos</a>
+  <a href="#jquery">Rendez-vous</a>
   </div>
+</div>
+ </div>
 </nav>
 </header>
 
