suppression de acutalité pour tester affichage sur mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 <div id="header-right">
 	
-  <a href="#css">Actualités</a>
+ <!-- <a href="#css">Actualités</a>-->  
   <a href="#js">À Propos</a>
   <a href="#jquery">Rendez-vous</a>
   </div>
