color:WhiteSmoke pour le texte du footer, liens du footer sans surlignage et sans bleu

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Sophie #####<br>
 <br>
 <br>
 <br>
-<a href="google.com">revenir à la page précédente</a>
+<a href="google.com">Plan du site</a>
 <br>
 <br>
 </div>  <!-- fin du container div-->
