donner un cadre à l'image, supprimer le fond bleu des liens

--- a/index.html
+++ b/index.html
@@ -46,28 +46,32 @@
 
 <div id="roomForNavBar"></div>
 <div class="container">
-<img id="mainPhoto" src="justice.jpg" height=300px></img>
+<img id="mainPhoto" src="justice.jpg" height=250px></img>
 <br>
 
-<h1>Sophie Avocat</h1>
-<p>Veuillez nous indiquer votre question</p>
+<h2>Sophie Morreel Avocat</h2>
+<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
+
+<!--<
 <form action="/action_page.php">
-login___: <input type="email" name="FirstName" autocomplete="on"><br>
-password: <input type="password" name="LastName"><br>
+login : <input type="email" name="FirstName" autocomplete="on"><br>
+password : <input type="password" name="LastName"><br>
+
 time: <input type="datetime-local" name="time"><br>
 radio: <input type="radio" name="radio"><br>
 checkbox: <input type="checkbox" name="checkbox"><br>
 color: <input type="color" name="color"><br>
-<input type="submit" value="get rekt">
+<input type="submit" value="envoyez">
+
 </form>
+-->
 
-
-
+<!--<script
 <h2>Un nouveau départ</h2>
 
 
 <script src="js/main.js"></script>
-<!--<script>alert("it's happening")</script>-->
+>alert("it's happening")</script>-->
 </div>  <!-- fin du container div-->
 </article>
 
