--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
-  <title>🔹🔷 Antoine Weber Website</title>
-  <meta name="description" content="Antoine Weber Website">
+  <title>Lex&Co Avocats🔹</title>
+  <meta name="description" content="Cabinet d'avocats">
   <meta name="author" content="Antoine Weber">
 
   <link rel="stylesheet" href="css/main.css">
