--- a/index.html
+++ b/index.html
@@ -43,20 +43,27 @@
 
 
 <article>
-
 <div id="roomForNavBar"></div>
-<br>
-<br>
-<br>
+<div id="panoramicPhoto">
+<div class="container">
+<img id="portrait" src="portrait.jpg" height=250px></img>
+</div>
+</div>
+
 
 <div class="container">
-<img id="mainPhoto" src="justice.jpg" height=250px></img>
+
+<br>
+<br>
+<br>
 <br>
 <h2>Sophie Morreel Avocat</h2>
+<div id="description">
 <p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
 <p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
 
 Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
+</div>
 <!--<
 <form action="/action_page.php">
 login : <input type="email" name="FirstName" autocomplete="on"><br>
