la police Open Sans necessitait un link dans le header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="fr-FR">
 <head>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
@@ -116,7 +117,7 @@ Sophie Morreel Weber<br>
 </address>
 <br>
 <br>
-<br>
+
 <a href="google.com">Plan du site</a>
 <br>
 <br>
