--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
 <nav>
 <div class="container">
-<div id="grid-container">
+<div class="grid-container">
 <div id="header-left">
 <a href="#html"><img id="logo" src="logo.png"></img></a>
 </div>
@@ -46,11 +46,7 @@
 <article>
 <div id="roomForNavBar"></div>
 <div id="panoramicPhoto">
-<!-- AAA 
-<div class="container">
-<img id="portrait" src="portrait.jpg" height=250px></img>
-</div>
--->
+
 </div>
 
 
@@ -59,13 +55,20 @@
 
 <br>
 <br>
-<h3>Votre solution juridique sur mesure</h3>
+<h3>Cabinet d'avocats généraliste à Fréjus</h3>
 <div class="description">
+ 
+
+
 <p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
 <p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
 
 Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
 </div>
+
+
+<div class="grid-container">
+<div>
 <h3>Une équipe expérimentée à votre service</h3>
 <div class="description">
 <p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
@@ -73,6 +76,8 @@ Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas ape
 
 Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
 </div>
+</div>
+<div>
 <h3>Un service humain et une portée internationale</h3>
 <div class="description">
 <p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
@@ -80,6 +85,12 @@ Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas ape
 
 Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
 </div>
+</div>
+</div>
+<br>
+<br>
+<img id="portrait" src="portrait.jpg" height=250px></img>
+<br>
 <br>
 <!--<
 <form action="/action_page.php">
