le footer a 3 colonnes et des headers h5

--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@ Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas ape
 </div>
 <br>
 <br>
+<!--<
 <img id="portrait" src="portrait.jpg" height=250px></img>
 <br>
 <br>
+-->
 <!--<
 <form action="/action_page.php">
 login : <input type="email" name="FirstName" autocomplete="on"><br>
@@ -120,24 +122,42 @@ color: <input type="color" name="color"><br>
 <footer>
 <div id="upperFooter">
 <div class="container">
+<div class="grid-container">
+<div>
 <br>
-<address>
-Lex&Co<br>
-Sophie Morreel Weber<br>
-64 Via Nova, 83600 Fréjus<br>
-</address>
-<br>
-<br>
+<h5>Dicta</h5>
 
-<a href="google.com">Plan du site</a>
+<a href="google.com">Quo cu inermis</a><br>
+<a href="google.com">Vim id dicta munere</a><br>
+<a href="google.com">Eripuit nam ad</a><br>
+<a href="google.com">Civibus consulatu</a>
 <br>
 <br>
+<br>
+</div>
+<div>
+<br>
+<h5>Omnis</h5>
+<a href="google.com">Quo cu inermis</a><br>
+<a href="google.com">Vim id dicta munere</a><br>
+<a href="google.com">Eripuit nam ad</a><br>
+<a href="google.com">Civibus consulatu</a>
+</div>
+<div>
+<br>
+<h5>Scripta</h5>
+<a href="google.com">Quo cu inermis</a><br>
+<a href="google.com">Vim id dicta munere</a><br>
+<a href="google.com">Eripuit nam ad</a><br>
+<a href="google.com">Civibus consulatu</a>
+</div>
+</div> 	<!-- fin du grid-container-->
 </div>  <!-- fin du container div-->
 </div>  <!-- fin du upperFooter-->
 
 <div id="lowerFooter">
 <div class="container">
-<span id="copyright">Copyright Antoine W. 2018</span>
+<span id="copyright">COPYRIGHT © 2018 LEX&CO - CABINET D'AVOCATS - TOUS DROITS RÉSERVÉS.</span>
 </div>  <!-- fin du container div-->
 </div>  <!-- fin du lowerFooter-->
 
