titres rouges, contenu de la page d'accueil, footer fini

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <div class="container">
 <div class="grid-container">
 <div id="header-left">
-<a href="#html"><img id="logo" src="logo.png"></img></a>
+<a href="index.html"><img id="logo" src="logo.png"></img></a>
 </div>
 <div id="header-right">
 
-  <a href="#css">Actualités</a>
-  <a href="#js">À Propos</a>
-  <a href="#jquery">Rendez-vous</a>
+  <a href="#css">Nos activités</a>
+  <a href="#js">Notre équipe</a>
+  <a href="contact.html">Contact</a>
   </div>
 </div>
  </div>
@@ -55,35 +55,29 @@
 
 <br>
 <br>
-<h3>Cabinet d'avocats généraliste à Fréjus</h3>
+<h3>Cabinet d'avocats en France et à l'international</h3>
 <div class="description">
  
 
 
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
+<p>Le cabinet d'avocats Lex&Co, fondé en 2005 par Maître Sophie Morreel Weber, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec le client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide et satisfaisante</p>
 
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
 </div>
 
 
 <div class="grid-container">
 <div>
-<h3>Une équipe expérimentée à votre service</h3>
+<h3>Une équipe expérimentée</h3>
 <div class="description">
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
-
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
+<p>Forte de 25 années de pratique du métier d'avocat, Maître Sophie Morreel Weber met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisations d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition et apporte la plus value résultant de plus d'une dizaine d'années de services d'exercice. </p>
+<p> Maître XX , en tant qu'avocate collaboratrice, spécialisée en XX, apporte son savoir-faire au cabinet et forme un atout complémentaire. (<a>Voir la présentation de notre équipe</a>)</p>
 </div>
 </div>
 <div>
-<h3>Un service humain et une portée internationale</h3>
+<h3>Une prestation complète</h3>
 <div class="description">
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
-
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
+<p>Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (<a>Voir la liste de nos services</a>) La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. De votre premier contact jusqu'à la satisfaction de votre demande, l'équipe du cabinet s'attache à fournir un service continu et réactif.</p>
+<p></p>
 </div>
 </div>
 </div>
@@ -114,6 +108,9 @@ color: <input type="color" name="color"><br>
 
 <script src="js/main.js"></script>
 >alert("it's happening")</script>-->
+
+
+
 </div>  <!-- fin du container div-->
 </article>
 
@@ -123,34 +120,37 @@ color: <input type="color" name="color"><br>
 <div id="upperFooter">
 <div class="container">
 <div class="grid-container">
-<div>
-<br>
-<h5>Dicta</h5>
-
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-<br>
-<br>
-<br>
-</div>
-<div>
-<br>
-<h5>Omnis</h5>
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-</div>
-<div>
-<br>
-<h5>Scripta</h5>
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-</div>
+	<div>
+		<br>
+		<h5>À propos</h5>
+		<a href="google.com">Qui sommes nous</a><br>
+		<a href="google.com">Honoraires</a><br>
+		<a href="google.com">Confidentialité</a><br>
+		<a href="google.com">Sécurité des données</a><br>
+		<a href="google.com">Mentions légales</a>
+		<br>
+		<br>
+		<br>
+		<br>
+	</div>
+	<div>
+		<br>
+		<h5>Nos services</h5>
+		<a href="google.com">Droit civil</a><br>
+		<a href="google.com">Droit des affaires</a><br>
+		<a href="google.com">Droit du travail</a><br>
+		<a href="google.com">Droit de la famille</a><br>
+		<a href="google.com">Plus de services...</a>
+	</div>
+	<div>
+		<br>
+		<h5>Contact</h5>
+		<a href="google.com"><b>04.94.51.16.16</b></a><br>
+		<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
+		<a href="google.com">64 Via Nova</a><br>
+		<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
+		<a href="google.com">83600 FREJUS</a>
+	</div>
 </div> 	<!-- fin du grid-container-->
 </div>  <!-- fin du container div-->
 </div>  <!-- fin du upperFooter-->
