--- a/index.html
+++ b/index.html
@@ -2,164 +2,146 @@
 
 <html lang="fr-FR">
 <head>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
-  <title>Lex&Co Avocats🔹</title>
-  <meta name="description" content="Cabinet d'avocats">
-  <meta name="author" content="Antoine Weber">
+		<title>Lex&Co Avocats🔹</title>
+		<meta name="description" content="Cabinet d'avocats">
+		<meta name="author" content="Antoine Weber">
 
-  <link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/png" href="favicon.png" />
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
-
-
-
-
-<header>
-<nav>
-<div class="container">
-<div class="grid-container">
-<div id="header-left">
-<a href="index.html"><img id="logo" src="logo.png"></img></a>
-</div>
-<div id="header-right">
-
-  <a href="#css">Nos activités</a>
-  <a href="#js">Notre équipe</a>
-  <a href="contact.html">Contact</a>
-  </div>
-</div>
- </div>
-</nav>
-</header>
-
+    <header>
+		<nav>
+			<div class="container">
+				<div class="grid-container">
+					<div id="header-left">
+					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
+					</div>
+					<div id="header-right">
+					  <a href="#css">Nos activités</a>
+					  <a href="#js">Notre équipe</a>
+					  <a href="contact.html">Contact</a>
+				  </div>
+				</div>
+			 </div>
+		</nav>
+	</header>
 
 
 <!-- AAA -->
 
-
-
 <article>
-<div id="roomForNavBar"></div>
-<div id="panoramicPhoto">
+	<div id="roomForNavBar"></div>
+	<div id="panoramicPhoto"></div>
+	
+	<div class="container">
+		<br>
+		<br>
+		<h3>Cabinet d'avocats en France et à l'international</h3>
+		<div class="description">
+			<p>Le cabinet d'avocats Lex&Co, fondé en 2005 par Maître Sophie Morreel Weber, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec le client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide et satisfaisante</p>
+		</div>
 
-</div>
+		<div class="grid-container">
+			<div>
+				<h3>Une équipe expérimentée</h3>
+				<div class="description">
+					<p>Forte de 25 années de pratique du métier d'avocat, Maître Sophie Morreel Weber met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisations d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition et apporte la plus value résultant de plus d'une dizaine d'années de services d'exercice. </p>
+					<p> Maître XX , en tant qu'avocate collaboratrice, spécialisée en XX, apporte son savoir-faire au cabinet et forme un atout complémentaire. (<a>Voir la présentation de notre équipe</a>)</p>
+				</div>
+			</div>
+			<div>
+				<h3>Une prestation complète</h3>
+				<div class="description">
+				<p>Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (<a>Voir la liste de nos services</a>) La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. De votre premier contact jusqu'à la satisfaction de votre demande, l'équipe du cabinet s'attache à fournir un service continu et réactif.</p>
+				<p></p>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
+		<!--<
+		<img id="portrait" src="portrait.jpg" height=250px></img>
+		<br>
+		<br>
+		-->
+		<!--<
+		<form action="/action_page.php">
+		login : <input type="email" name="FirstName" autocomplete="on"><br>
+		password : <input type="password" name="LastName"><br>
 
+		time: <input type="datetime-local" name="time"><br>
+		radio: <input type="radio" name="radio"><br>
+		checkbox: <input type="checkbox" name="checkbox"><br>
+		color: <input type="color" name="color"><br>
+		<input type="submit" value="envoyez">
 
-<div class="container">
+		</form>
+		-->
 
-
-<br>
-<br>
-<h3>Cabinet d'avocats en France et à l'international</h3>
-<div class="description">
- 
-
-
-<p>Le cabinet d'avocats Lex&Co, fondé en 2005 par Maître Sophie Morreel Weber, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec le client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide et satisfaisante</p>
-
-</div>
-
-
-<div class="grid-container">
-<div>
-<h3>Une équipe expérimentée</h3>
-<div class="description">
-<p>Forte de 25 années de pratique du métier d'avocat, Maître Sophie Morreel Weber met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisations d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition et apporte la plus value résultant de plus d'une dizaine d'années de services d'exercice. </p>
-<p> Maître XX , en tant qu'avocate collaboratrice, spécialisée en XX, apporte son savoir-faire au cabinet et forme un atout complémentaire. (<a>Voir la présentation de notre équipe</a>)</p>
-</div>
-</div>
-<div>
-<h3>Une prestation complète</h3>
-<div class="description">
-<p>Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (<a>Voir la liste de nos services</a>) La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. De votre premier contact jusqu'à la satisfaction de votre demande, l'équipe du cabinet s'attache à fournir un service continu et réactif.</p>
-<p></p>
-</div>
-</div>
-</div>
-<br>
-<br>
-<!--<
-<img id="portrait" src="portrait.jpg" height=250px></img>
-<br>
-<br>
--->
-<!--<
-<form action="/action_page.php">
-login : <input type="email" name="FirstName" autocomplete="on"><br>
-password : <input type="password" name="LastName"><br>
-
-time: <input type="datetime-local" name="time"><br>
-radio: <input type="radio" name="radio"><br>
-checkbox: <input type="checkbox" name="checkbox"><br>
-color: <input type="color" name="color"><br>
-<input type="submit" value="envoyez">
-
-</form>
--->
-
-<!--<script
-<h2>Un nouveau départ</h2>
+		<!--<script
+		<h2>Un nouveau départ</h2>
 
 
-<script src="js/main.js"></script>
->alert("it's happening")</script>-->
+		<script src="js/main.js"></script>
+		>alert("it's happening")</script>-->
 
 
 
-</div>  <!-- fin du container div-->
+	</div>  <!-- fin du container div-->
 </article>
 
 
 
 <footer>
-<div id="upperFooter">
-<div class="container">
-<div class="grid-container">
-	<div>
-		<br>
-		<h5>À propos</h5>
-		<a href="google.com">Qui sommes nous</a><br>
-		<a href="google.com">Honoraires</a><br>
-		<a href="google.com">Confidentialité</a><br>
-		<a href="google.com">Sécurité des données</a><br>
-		<a href="google.com">Mentions légales</a>
-		<br>
-		<br>
-		<br>
-		<br>
-	</div>
-	<div>
-		<br>
-		<h5>Nos services</h5>
-		<a href="google.com">Droit civil</a><br>
-		<a href="google.com">Droit des affaires</a><br>
-		<a href="google.com">Droit du travail</a><br>
-		<a href="google.com">Droit de la famille</a><br>
-		<a href="google.com">Plus de services...</a>
-	</div>
-	<div>
-		<br>
-		<h5>Contact</h5>
-		<a href="google.com"><b>04.94.51.16.16</b></a><br>
-		<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
-		<a href="google.com">64 Via Nova</a><br>
-		<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
-		<a href="google.com">83600 FREJUS</a>
-	</div>
-</div> 	<!-- fin du grid-container-->
-</div>  <!-- fin du container div-->
-</div>  <!-- fin du upperFooter-->
+	<div id="upperFooter">
+		<div class="container">
+			<div class="grid-container">
+				<div>
+					<br>
+					<h5>À propos</h5>
+					<a href="google.com">Qui sommes nous</a><br>
+					<a href="google.com">Honoraires</a><br>
+					<a href="google.com">Confidentialité</a><br>
+					<a href="google.com">Sécurité des données</a><br>
+					<a href="google.com">Mentions légales</a>
+					<br>
+					<br>
+					<br>
+					<br>
+				</div>
+				<div>
+					<br>
+					<h5>Nos services</h5>
+					<a href="google.com">Droit civil</a><br>
+					<a href="google.com">Droit des affaires</a><br>
+					<a href="google.com">Droit du travail</a><br>
+					<a href="google.com">Droit de la famille</a><br>
+					<a href="google.com">Plus de services...</a>
+				</div>
+				<div>
+					<br>
+					<h5>Contact</h5>
+					<a href="google.com"><b>04.94.51.16.16</b></a><br>
+					<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
+					<a href="google.com">64 Via Nova</a><br>
+					<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
+					<a href="google.com">83600 FREJUS</a>
+				</div>
+			</div> 	<!-- fin du grid-container-->
+		</div>  <!-- fin du container div-->
+	</div>  <!-- fin du upperFooter-->
 
-<div id="lowerFooter">
-<div class="container">
-<span id="copyright">COPYRIGHT © 2018 LEX&CO - CABINET D'AVOCATS - TOUS DROITS RÉSERVÉS.</span>
-</div>  <!-- fin du container div-->
-</div>  <!-- fin du lowerFooter-->
+	<div id="lowerFooter">
+		<div class="container">
+		<span id="copyright">COPYRIGHT © 2018 LEX&CO - CABINET D'AVOCATS - TOUS DROITS RÉSERVÉS.</span>
+		</div>  <!-- fin du container div-->
+	</div>  <!-- fin du lowerFooter-->
 
 
 </footer>
