synchronisation des footers

--- a/contact.html
+++ b/contact.html
@@ -118,46 +118,49 @@ color: <input type="color" name="color"><br>
 
 
 <footer>
-<div id="upperFooter">
-<div class="container">
-<div class="grid-container">
-<div>
-<br>
-<h5>Dicta</h5>
+	<div id="upperFooter">
+		<div class="container">
+			<div class="grid-container">
+				<div>
+					<br>
+					<h5>À propos</h5>
+					<a href="google.com">Qui sommes nous</a><br>
+					<a href="google.com">Honoraires</a><br>
+					<a href="google.com">Confidentialité</a><br>
+					<a href="google.com">Sécurité des données</a><br>
+					<a href="google.com">Mentions légales</a>
+					<br>
+					<br>
+					<br>
+					<br>
+				</div>
+				<div>
+					<br>
+					<h5>Nos services</h5>
+					<a href="google.com">Droit civil</a><br>
+					<a href="google.com">Droit des affaires</a><br>
+					<a href="google.com">Droit du travail</a><br>
+					<a href="google.com">Droit de la famille</a><br>
+					<a href="google.com">Plus de services...</a>
+				</div>
+				<div>
+					<br>
+					<h5>Contact</h5>
+					<a href="google.com"><b>04.94.51.16.16</b></a><br>
+					<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
+					<a href="google.com">64 Via Nova</a><br>
+					<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
+					<a href="google.com">83600 FREJUS</a>
+				</div>
+			</div> 	<!-- fin du grid-container-->
+		</div>  <!-- fin du container div-->
+	</div>  <!-- fin du upperFooter-->
 
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-<br>
-<br>
-<br>
-</div>
-<div>
-<br>
-<h5>Omnis</h5>
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-</div>
-<div>
-<br>
-<h5>Scripta</h5>
-<a href="google.com">Quo cu inermis</a><br>
-<a href="google.com">Vim id dicta munere</a><br>
-<a href="google.com">Eripuit nam ad</a><br>
-<a href="google.com">Civibus consulatu</a>
-</div>
-</div> 	<!-- fin du grid-container-->
-</div>  <!-- fin du container div-->
-</div>  <!-- fin du upperFooter-->
-
-<div id="lowerFooter">
-<div class="container">
-<span id="copyright">COPYRIGHT © 2018 LEX&CO - CABINET D'AVOCATS - TOUS DROITS RÉSERVÉS.</span>
-</div>  <!-- fin du container div-->
-</div>  <!-- fin du lowerFooter-->
+	<div id="lowerFooter">
+		<div class="container">
+		<span id="copyright">COPYRIGHT © 2018 LEX&CO - CABINET D'AVOCATS - TOUS DROITS RÉSERVÉS.</span>
+		</div>  <!-- fin du container div-->
+	</div>  <!-- fin du lowerFooter-->
 
 
 </footer>
