contact.html : contenu et plan d'accès

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 				<div>
 					<br>
 					<h5>Contact</h5>
-					<a href="google.com"><b>04.94.51.16.16</b></a><br>
-					<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
-					<a href="google.com">64 Via Nova</a><br>
-					<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
-					<a href="google.com">83600 FREJUS</a>
+					<a href="tel:0494511616"><b>04.94.51.16.XX</b></a><br>
+					<a href="mailto:contact@lexcolaw.com">contact@lexco.com</a><br>
+					64 Via Nova<br>
+					Pôle d'Excellence Jean Louis<br>
+					83600 FREJUS
 				</div>
 			</div> 	<!-- fin du grid-container-->
 		</div>  <!-- fin du container div-->
