--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,34 @@
 
 <html lang="fr-FR">
 <head>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
-  <title>Lex&Co Avocats🔹</title>
-  <meta name="description" content="Cabinet d'avocats">
-  <meta name="author" content="Antoine Weber">
-
-  <link rel="stylesheet" href="css/main.css">
-<link rel="icon" type="image/png" href="favicon.png" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+		<title>Lex&Co Avocats🔹</title>
+		<meta name="description" content="Cabinet d'avocats">
+		<meta name="author" content="Antoine Weber">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
+	<header>
+		<nav>
+			<div class="container">
+				<div class="grid-container">
+					<div id="header-left">
+					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
+					</div>
+					<div id="header-right">
+					  <a href="#css">Nos activités</a>
+					  <a href="#js">Notre équipe</a>
+					  <a href="contact.html">Contact</a>
+				  </div>
+				</div>
+			 </div>
+		</nav>
+	</header>
 
-
-
-
-<header>
-<nav>
-<div class="container">
-<div class="grid-container">
-<div id="header-left">
-<a href="index.html"><img id="logo" src="logo.png"></img></a>
-</div>
-<div id="header-right">
-
-  <a href="#css">Nos activités</a>
-  <a href="#js">Notre équipe</a>
-  <a href="#jquery">Contact</a>
-  </div>
-</div>
- </div>
-</nav>
-</header>
 
 
 
@@ -44,75 +38,33 @@
 
 
 <article>
-<div id="roomForNavBar"></div>
+	<div id="roomForNavBar"></div>
+	
+	<div class="container">
+		<br>
+		<br>
+		<br>
+		<h3>Contact</h3>
+		<div class="description">
+			<p>
+				Prendre rendez-vous par téléphone : <a href="tel:0494511616"><b>04.94.51.16.XX</b></a><br>
+			</p>
+			<p>
+				Nous contacter par mail : <a href="mailto:xxx@lexco.com">xxx@lexco.com</a>
+			</p>
+			<p>
+				Horaires d'ouverture : Lundi au Vendredi de 09H00 à 17H30.			
+			</p>
+			<p>
+				Plan d'accès :<br><br>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5791.503743039112!2d6.726920132578845!3d43.46577717254867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cea293adf28fd9%3A0x4b0596d2e82b77f3!2sMoreel+Weber+Sophie!5e0!3m2!1sen!2sfr!4v1526363452237" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>				
+			</p>
+			<br>
+			<br>
+		</div>
 
 
-
-<div class="container">
-
-
-<br>
-<br>
-<h3>Contact</h3>
-<div class="description">
- 
-
-
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
-
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
-</div>
-
-
-<div class="grid-container">
-<div>
-<h3>Une équipe expérimentée à votre service</h3>
-<div class="description">
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
-
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
-</div>
-</div>
-<div>
-<h3>Un service humain et une portée internationale</h3>
-<div class="description">
-<p>Lorem ipsum dolor sit amet, et sit scripta saperet electram. Eos an putent aliquam. Quo cu inermis volutpat, ius ea suas vero duis. At ius impetus feugait, sale eligendi sententiae ad sit.</p>
-<p>Sed omnis epicurei fabellas no, vim id dicta munere. Odio saperet cu est. Oblique mediocrem evertitur no quo, pri in meliore nusquam. Audiam utamur eripuit nam ad. Te duo pertinax salutandi omittantur, sint possit no vix.
-
-Postea corrumpit vim ei, per id recusabo quaerendum reformidans, no vix suas aperiri. Saperet quaestio atomorum vel an, civibus consulatu mea et. Has regione noluisse euripidis ne. Mel ne erat probo, dicta cetero iuvaret cu his, has te modo argumentum consequuntur. Ius te nulla concludaturque, exerci iuvaret vel ex.</p>
-</div>
-</div>
-</div>
-<br>
-<br>
-<!--<
-<img id="portrait" src="portrait.jpg" height=250px></img>
-<br>
-<br>
--->
-<!--<
-<form action="/action_page.php">
-login : <input type="email" name="FirstName" autocomplete="on"><br>
-password : <input type="password" name="LastName"><br>
-
-time: <input type="datetime-local" name="time"><br>
-radio: <input type="radio" name="radio"><br>
-checkbox: <input type="checkbox" name="checkbox"><br>
-color: <input type="color" name="color"><br>
-<input type="submit" value="envoyez">
-
-</form>
--->
-
-<!--<script
-<h2>Un nouveau départ</h2>
-
-
-<script src="js/main.js"></script>
->alert("it's happening")</script>-->
-</div>  <!-- fin du container div-->
+	</div>  <!-- fin du container div-->
 </article>
 
 
@@ -146,11 +98,11 @@ color: <input type="color" name="color"><br>
 				<div>
 					<br>
 					<h5>Contact</h5>
-					<a href="google.com"><b>04.94.51.16.16</b></a><br>
-					<a href="mailto:contact@lexcolaw.com">contact@lexcolaw.com</a><br>
-					<a href="google.com">64 Via Nova</a><br>
-					<a href="google.com">Pôle d'Excellence Jean Louis</a><br>
-					<a href="google.com">83600 FREJUS</a>
+					<a href="tel:0494511616"><b>04.94.51.16.XX</b></a><br>
+					<a href="mailto:contact@lexcolaw.com">contact@lexco.com</a><br>
+					64 Via Nova<br>
+					Pôle d'Excellence Jean Louis<br>
+					83600 FREJUS
 				</div>
 			</div> 	<!-- fin du grid-container-->
 		</div>  <!-- fin du container div-->
@@ -164,6 +116,7 @@ color: <input type="color" name="color"><br>
 
 
 </footer>
+
 
 
 </body>
