page de l'équipe

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 					</div>
 					<div id="header-right">
 					  <a href="#css">Nos activités</a>
-					  <a href="#js">Notre équipe</a>
+					  <a href="team.html">Notre équipe</a>
 					  <a href="contact.html">Contact</a>
 				  </div>
 				</div>
