--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
 					</div>
 					<div id="header-right">
 					  <a href="#css">Nos activités</a>
-					  <a href="team.html">Notre équipe</a>
+					  <a href="#js">Notre équipe</a>
 					  <a href="contact.html">Contact</a>
 				  </div>
 				</div>
@@ -31,65 +31,74 @@
 	</header>
 
 
+
+
 <!-- AAA -->
+
+
 
 <article>
 	<div id="roomForNavBar"></div>
-	<div id="panoramicPhoto"></div>
 	
 	<div class="container">
 		<br>
 		<br>
-		<h3>Cabinet d'avocats en France et à l'international</h3>
+		<br>
+		<h3>L'équipe</h3>
 		<div class="description">
-			<p>Le cabinet d'avocats Lex&Co, fondé en 2005 par Maître Sophie Morreel Weber, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec le client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide et satisfaisante</p>
+			<p>L'équipe du cabinet Lex&Co</p>
 		</div>
-
+		
 		<div class="grid-container">
 			<div>
-				<h3>Une équipe expérimentée</h3>
+				<h3></h3>
+				<img id="portrait" src="portrait.jpg" height=250px></img>
+				<br>
+				<br>	
 				<div class="description">
-					<p>Forte de 25 années de pratique du métier d'avocat, Maître Sophie Morreel Weber met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisations d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition et apporte la plus value résultant de plus d'une dizaine d'années de services d'exercice. </p>
-					<p> Maître XX , en tant qu'avocate collaboratrice, spécialisée en XX, apporte son savoir-faire au cabinet et forme un atout complémentaire. (<a>Voir la présentation de notre équipe</a>)</p>
+					<p>Lorem ipsum</p>
+					
+					<br>
+					<br>
 				</div>
 			</div>
 			<div>
-				<h3>Une prestation complète</h3>
+				<h3>Maître Sophie Morreel Weber</h3>
 				<div class="description">
-				<p>Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (<a>Voir la liste de nos services</a>) La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. De votre premier contact jusqu'à la satisfaction de votre demande, l'équipe du cabinet s'attache à fournir un service continu et réactif.</p>
-				<p></p>
+					<h5>Education : </h5>
+					<p>
+						<ul>
+								<li>
+									Lorem Ipsum Lorem Ipsum L Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psumorem Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum
+								</li>
+								<li>
+									Lorem Ipsum Lorem Ipsum
+								</li>
+								<li>
+									Lorem Ipsum L Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum orem Ipsum 
+								</li>
+						</ul> 
+					</p>
+					<h5>Expérience professionnelle : </h5>
+					<p>
+						<ul>
+								<li>
+									Lorem Ipsum Lorem Ipsum L Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psumorem Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum
+								</li>
+								<li>
+									Lorem Ipsum Lorem Ipsum
+								</li>
+								<li>
+									Lorem Ipsum L Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum orem Ipsum 
+								</li>
+						</ul> 
+					</p>
+					
 				</div>
 			</div>
-		</div>
+		</div> <!-- fin du grid container-->
 		<br>
 		<br>
-		<!--<
-		<img id="portrait" src="portrait.jpg" height=250px></img>
-		<br>
-		<br>
-		-->
-		<!--<
-		<form action="/action_page.php">
-		login : <input type="email" name="FirstName" autocomplete="on"><br>
-		password : <input type="password" name="LastName"><br>
-
-		time: <input type="datetime-local" name="time"><br>
-		radio: <input type="radio" name="radio"><br>
-		checkbox: <input type="checkbox" name="checkbox"><br>
-		color: <input type="color" name="color"><br>
-		<input type="submit" value="envoyez">
-
-		</form>
-		-->
-
-		<!--<script
-		<h2>Un nouveau départ</h2>
-
-
-		<script src="js/main.js"></script>
-		>alert("it's happening")</script>-->
-
-
 
 	</div>  <!-- fin du container div-->
 </article>
@@ -143,6 +152,7 @@
 
 
 </footer>
+
 
 
 </body>
