ajout d'une barre de couleur sous la navbar

--- a/team.html
+++ b/team.html
@@ -38,10 +38,9 @@
 
 
 <article>
+	<div id="lowerHeader"></div>
 	<div id="roomForNavBar"></div>
-	
 	<div class="container">
-		<br>
 		<br>
 		<br>
 		<h3>L'équipe</h3>
