--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<header>
+	<header id="header">
 		<nav>
 			<div class="container">
 				<div class="grid-container">
@@ -25,8 +25,8 @@
 					  <a href="team.html">Notre équipe</a>
 					  <a href="contact.html">Contact</a>
 				  </div>
-				</div>
-			 </div>
+				</div>	
+			</div> <!-- fin du center container -->
 		</nav>
 	</header>
 
@@ -38,10 +38,9 @@
 
 
 <article>
+	<div id="lowerHeader"></div>
 	<div id="roomForNavBar"></div>
-	
 	<div class="container">
-		<br>
 		<br>
 		<br>
 		<h3>Contact</h3>
