--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<header>
+	<header id="header">
 		<nav>
 			<div class="container">
 				<div class="grid-container">
@@ -21,9 +21,9 @@
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
 					</div>
 					<div id="header-right">
-					  <a href="#css">Nos activités</a>
-					  <a href="team.html">Notre équipe</a>
-					  <a href="contact.html">Contact</a>
+					  <a href="#css">NOS SERVICES</a>
+					  <a href="team.html">LE CABINET</a>
+					  <a href="contact.html">CONTACT</a>
 				  </div>
 				</div>
 			 </div>
@@ -34,6 +34,7 @@
 <!-- AAA -->
 
 <article>
+	<div id="lowerHeader"></div>
 	<div id="roomForNavBar"></div>
 	<div id="panoramicPhoto"></div>
 	
