majuscules dans la navbar

--- a/team.html
+++ b/team.html
@@ -21,9 +21,9 @@
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
 					</div>
 					<div id="header-right">
-					  <a href="#css">Nos activités</a>
-					  <a href="#js">Notre équipe</a>
-					  <a href="contact.html">Contact</a>
+					  <a href="#css">NOS SERVICES</a>
+					  <a href="team.html">LE CABINET</a>
+					  <a href="contact.html">CONTACT</a>
 				  </div>
 				</div>
 			 </div>
